<resources>
    <string name="app_name">BuyDesire</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="memulist">
        <item>Add</item>
        <item>Desires</item>
        <item>Recommended</item>
        <item>Gifts</item>
        <item>Merchants</item>
        <item>Find Friends</item>
        <item>Invite Friends</item>
        <item>Shopping Bag</item>
        <item>Help</item>
        <item>Settings</item>

    </string-array>
    <string-array name="addfriendlist">
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Google+</item>
        <item>Contacts</item>
    </string-array>
    <string-array name="merchants_list">
        <item>Roll-Royce VN 1</item>
        <item>Roll-Royce VN 2</item>
        <item>Roll-Royce VN 3</item>
        <item>Roll-Royce VN 4</item>
        <item>Roll-Royce VN 5</item>
        <item>Roll-Royce VN 6</item>
        <item>Roll-Royce VN 7</item>
        <item>Roll-Royce VN 8</item>
        <item>Roll-Royce VN 9</item>
        <item>Roll-Royce VN 10</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Open</string>
    <string-array name="tabhostdirectory">
        <item>#</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="listcompanyname">
        <item>A Company</item>
        <item>B Company</item>
        <item>C Company</item>
        <item>D Company</item>
        <item>E Company</item>
        <item>F Company</item>
        <item>G Company</item>
        <item>H Company</item>
        <item>I Company</item>
        <item>J Company</item>
        <item>K Company</item>
        <item>L Company</item>
        <item>M Company</item>
        <item>N Company</item>
        <item>O Company</item>
        <item>P Company</item>
        <item>Q Company</item>
        <item>R Company</item>
        <item>S Company</item>
        <item>T Company</item>
        <item>U Company</item>
        <item>V Company</item>
        <item>W Company</item>
        <item>X Company</item>
        <item>Y Company</item>
        <item>Z Company</item>
    </string-array>
    <string-array name="recommedations">
        <item>Suffested for you to follow</item>
        <item>Popular users</item>
    </string-array>
    <string-array name="listhelp">
        <item>About</item>
        <item>Terms &amp; Policies</item>
        <item>FAQs</item>
        <item>Contact information</item>
    </string-array>
    <string-array name="listsetting">
        <item>Edit profile</item>
        <item>Shipping &amp; Billing</item>
        <item>Payments</item>
        <item>Notifications</item>
        <item>Privacy</item>
        <item>Location Services</item>
        <item>Languages</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">1580345865545540</string>
    <string name="twitter_callback">http://javatechig.android.app</string>
    <string name="twitter_consumer_key"> 12cecIEZAldeAqPEQhBQh3MGq</string>
    <string name="twitter_consumer_secret"> KTrYJBtzraJ7AbE6xICjuKThQxAjfedN0cijdCuAgVNThbcLJR</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="API">http://dev.m.api.buydesire.com</string>
    <string name="title_activity_store_infomation">StoreInfomationActivity</string>
    <string-array name="listmoreinfo">
        <item>Postage &amp; Delivery</item>
        <item>Returns &amp; Exchanges</item>
        <item>Customer Service</item>
        <item>Join Loyalty Program</item>
        <item>Payment Options</item>
    </string-array>
    <string name="title_activity_view_in_map">ViewInMapActivity</string>
    <string name="title_activity_menu_more">MenuMoreActivity</string>
    <string-array name="menumore_bycategory">
        <item>Bars &amp; Wine</item>
        <item>Travel</item>
        <item>Local Experiences</item>
        <item>Beauty</item>
        <item>Home</item>
        <item>Pantry &amp; Cellar</item>
        <item>Gadgets</item>
        <item>Art</item>
        <item>Food</item>
        <item>Media</item>
        <item>Outdoors &amp; Active</item>
        <item>DIY &amp; Crafts</item>
        <item>Workspace</item>
        <item>Cars &amp; Vehicles</item>
        <item>Vintage</item>
        <item>Kids</item>

    </string-array>
    <string-array name="menumore_byregion">
        <item>All</item>
        <item>Australia</item>
        <item>Canada</item>
        <item>China</item>
        <item>Hong Kong</item>
        <item>New Zealand</item>
        <item>Singapore</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Vietnam</item>
    </string-array>
    <string-array name="menumore_sort">
        <item>Popularity</item>
        <item>Price High to Low</item>
        <item>Brands A to Z</item>
        <item>Brands Z to A</item>
        <item>What\'s New</item>
    </string-array>
    <string name="title_activity_camera_preview">CameraPreviewActivity</string>
    <string name="title_activity_detail_product">DetailProductActivity</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_view_nofitcation_activtiy">ViewNofitcationActivtiy</string>
    <string name="title_activity_save_desire">SaveDesireActivity</string>
    <string name="title_activity_share_qrcode">ShareQRCode</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_shipping_billing">ShippingBillingActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_notification_setting">NotificationSettingActivity</string>
    <string name="title_activity_privacy">PrivacyActivity</string>
    <string name="title_activity_location_service">LocationServiceActivity</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string-array name="language">
        <item>English</item>
        <item>中国</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>
    <string name="faqsIntro">This is a shorlist of our most frequently questions. For
    more information about BuyDesire or if you need support, please <a href="#">contact us</a>.
    </string>
    <string name="howdoiusebuydesire">BuyDesire is a mobile app that connects you to the brands you know and love so
        you can enjoy exclusively tailored offer and promotions directly to items you
        have scanned in&#45;store, it will be added to your MyDesires List. \n \nOnce an item has been added to My Desires,
         you will be able to view all of the latest product and pricing information that may include customer reviews and videos, you\'ll
         be able to share your desires with friends and family for their feedback. \n \nTo place an order
        simply add the items from your \"MyDesires\" list to \"Shopping Bag\" and click \"Proceed to Checkout\".
         When an order is confirmed, you will receive an order confirmation email and In App in the \"Purchases\" tab so
        you can keep track of all of your purchases through BuyDesire.
    </string>
    <string name="whathappensaffteriorder">When your order is confirmed, the retailer you purchased the items from will be notified inmediately. Depending
        on what delivery method you selected during Checkout, your items will either be made abailable for collection in&#45;store
        or will be packaged and shipped to your address by the retailer. \n \nTo check order delivery times
        for each of our participating retailers, please visit the BuyDesire website <a href="#">www.buydesire.com</a>.
    </string>
    <string name="whenwillireceivemyorder">The retailer you purchased the items from is responible for fulliling and shipping your order. Deliveries will be packaged and shipped
        within the time you selected during Checkout. \n \nTo check the status of your order, please contact the Customer
        Service Centre of the retailer you placed the order through. Contact details for all participating retailers anc be found
         by visiting the BuyDesire website <a href="#">www.buydesire.com</a>.
    </string>
    <string name="howdoireturnanitem">Our participating retailers want to ensure you are completely satisfied with your orders and understand sometimes an item may
        not be suitable. BuyDesire Members may exchange or return full&#45;priced merchandise in its original condition, with
        appropriate barcodes and proof of purchase to the retailer you placed the order through. \n \nFor more details
        on how to return or exchange items through particitpating retailers, please visit the BuyDesire website  <a href="#">www.buydesire.com</a>.
    </string>
    <string name="aremydetailssafe">BuyDesire takes the security of your sensitive customer information seriously. We have taken appropriate security measures
        including procedural, technical and administrative to help safeguard your personal information. All customer information is located on a secure
        server behind a firewall and is not directly connected to the internet. The intergrity of this firewall is tested regularly and it meets all
        recognised industry standards. \n \nBuyDesire use 128&#45;bit Secure Sockets Layer(SSL) encryption technology in the
        transmission of your sensitive personal information between your system and ours that provides security
        while information is being trasmitted over the Internet or through a mobile device. \n \nTo check the security of
        your coneection during checkout, look for the unbroken key or closed look at the bottom of your brower window.
         this indicates SSL is active. We want you to feel confident purchasing items through BuyDesire. However, you should be aware that 100% security is not always
        possible and although we take steps to secure your information, we do not promise, and you should not expect, that your personal
        informatin or orther communications will wlways remain secure. Should any event occur when your sensitive
        personal information is compromised, we will notify you immediately. \n \nPlacement of any orders or submisson
        of enquiries at BuyDesire is taken as acceptance of the above Security guidelines. \n \nIf you have nay concerns
        regarding our Security policy, lease contact our Customer SUpport Centre <a href="#">welhello@buydesire.com</a>.
    </string>
</resources>