<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.giangdam.buydesireex1.FAQsActivity">

    <include android:id="@+id/app_bar_faqs"  layout="@layout/app_bar_storeinfo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Frequently Asked Questions"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:text="@string/faqsIntro"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. How do I use BuyDesire?"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:text="@string/howdoiusebuydesire"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2. What happens after I order?"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:text="@string/whathappensaffteriorder"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3. When will I receive my order?"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:text="@string/whenwillireceivemyorder"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4. How do I return an item?"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:text="@string/howdoireturnanitem"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5. Are my details safe?"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"

                />

            <TextView
                android:layout_marginBottom="30dp"
                android:text="@string/aremydetailssafe"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
